env template modified

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,5 +1,3 @@
-# .env
-
 # ------------------
 # --- app config ---
 # ------------------
@@ -23,19 +21,25 @@ OTP_EXPIRE_SECONDS = 360
 # --------------------
 
 # set `USE_LOCAL_FALLBACK=True` if you dont have a SMTP server.
+
+# -------- SMTP (Hostinger Email) --------
+SMTP_SERVER=smtp.hostinger.com
+SMTP_PORT=465
+SMTP_USERNAME=info@skstudentpath.com
+SMTP_PASSWORD=@Adarsh@123
+SMTP_FROM_EMAIL=info@skstudentpath.com
+
+
 USE_LOCAL_FALLBACK=false
 
-DATABASE_URL=""
-RESEND_API_KEY=""
-SECRET_KEY=""
+DATABASE_URL="""
 
-# cloudinary config
 
+
+# Cloudinary Configuration
 CLOUDINARY_CLOUD_NAME=""
 CLOUDINARY_API_KEY=""
 CLOUDINARY_API_SECRET=""
 
-RAZORPAY_KEY_ID=""
-RAZORPAY_KEY_SECRET=""
-
-
+# Optional (recommended)
+CLOUDINARY_URL=""
