booking module done

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -3,6 +3,7 @@
 # ------------------
 
 APP_NAME=sk-mvp
+PROJECT_NAME=SK Student Path
 
 # --- JWT config ---
 # Use this command to generate a SECRET_KEY: $ openssl rand -hex 32
@@ -16,30 +17,25 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 OTP_SECRET_KEY = ""
 OTP_EXPIRE_SECONDS = 360
 
+# Database Configuration
+DATABASE_URL="""
+
 # --------------------
 # --- email config ---
 # --------------------
 
 # set `USE_LOCAL_FALLBACK=True` if you dont have a SMTP server.
-
-# -------- SMTP (Hostinger Email) --------
-SMTP_SERVER=smtp.hostinger.com
-SMTP_PORT=465
-SMTP_USERNAME=info@skstudentpath.com
-SMTP_PASSWORD=@Adarsh@123
-SMTP_FROM_EMAIL=info@skstudentpath.com
-
-
 USE_LOCAL_FALLBACK=false
 
-DATABASE_URL="""
+# for resend
+RESEND_API_KEY=""
+RESEND_FROM_EMAIL=""
+RESEND_SECRET_KEY=""
 
+# cloudinary config
 
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_URL=
 
-# Cloudinary Configuration
-CLOUDINARY_CLOUD_NAME=""
-CLOUDINARY_API_KEY=""
-CLOUDINARY_API_SECRET=""
-
-# Optional (recommended)
-CLOUDINARY_URL=""
