implemented centralized logging utility for backend and frontend

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -38,4 +38,9 @@ CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_URL=
+# --------------------
+# --- logging config ---
+# --------------------
+# Set to true to enable detailed logging throughout the application
+ENABLE_LOGS=false
 
