--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,8 @@
 # API Configuration
 VITE_API_URL=http://localhost:8000
+# Logging Configuration
+# Set to true to enable detailed console logging
+VITE_ENABLE_LOGS=false
 
 # Cloudinary Configuration (for image uploads)
 VITE_CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
