--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,9 @@
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.511.0",
     "qrcode.react": "^4.2.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
     "react-qr": "^0.0.2",
@@ -38,9 +39,12 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
     "postcss": "^8.4.35",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "^3.4.1",
+    "terser": "^5.46.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.1",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
