--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -9,50 +9,7 @@
   "orientation": "portrait-primary",
   "scope": "/",
   "lang": "en-IN",
-  "icons": [
-    {
-      "src": "/icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/icons/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
-  ],
+  "icons": [],
   "categories": ["education", "lifestyle", "utilities", "productivity"],
   "screenshots": [],
   "related_applications": [],
@@ -62,15 +19,13 @@
       "name": "Find Coaching Centers",
       "short_name": "Coaching",
       "description": "Browse coaching centers in Kanpur",
-      "url": "/listings?category=coaching",
-      "icons": [{"src": "/icons/coaching-icon.png", "sizes": "96x96"}]
+      "url": "/listings?category=coaching"
     },
     {
       "name": "Find PG & Hostels",
       "short_name": "PG/Hostels",
       "description": "Browse PG and hostels in Kanpur",
-      "url": "/listings?category=pg",
-      "icons": [{"src": "/icons/pg-icon.png", "sizes": "96x96"}]
+      "url": "/listings?category=pg"
     }
   ]
 }
